@@ -74,7 +74,7 @@ public class RepositoryWorkItem implements WorkItem {
         this.listeners = listeners;
     }
 
-    private void handleNewRef(Repository localRepo, Reference ref, Collection<Reference> allRefs, Collection<Reference> candidateRefs,
+    private void handleNewRef(Repository localRepo, Reference ref, Collection<Reference> candidateRefs,
                               RepositoryListener listener, Path scratchPath) throws NonRetriableException {
         // Figure out the best parent ref
         var candidates = new HashSet<>(candidateRefs);
@@ -114,7 +114,7 @@ public class RepositoryWorkItem implements WorkItem {
         listener.onNewCommits(repository, localRepo, scratchPath, commits, branch);
     }
 
-    private List<Throwable> handleRef(Repository localRepo, UpdateHistory history, Reference ref, Collection<Reference> allRefs,
+    private List<Throwable> handleRef(Repository localRepo, UpdateHistory history, Reference ref,
                                       Collection<Reference> candidateRefs, Path scratchPath) throws IOException {
         var errors = new ArrayList<Throwable>();
         var branch = new Branch(ref.name());
@@ -126,7 +126,7 @@ public class RepositoryWorkItem implements WorkItem {
                     history.setBranchHash(branch, listener.name(), ref.hash());
                 }
                 try {
-                    handleNewRef(localRepo, ref, allRefs, candidateRefs, listener, scratchPath.resolve(listener.name()));
+                    handleNewRef(localRepo, ref, candidateRefs, listener, scratchPath.resolve(listener.name()));
                 } catch (NonRetriableException e) {
                     errors.add(e.cause());
                     continue;
@@ -352,14 +352,15 @@ public class RepositoryWorkItem implements WorkItem {
         try {
             var localRepo = repositoryPool.materializeBare(repository, scratchPath.resolve("notify").resolve("repowi").resolve(repository.name()));
             var defaultBranchName = localRepo.defaultBranch().name();
+            // All the branches can be candidate branches except pr/X branches
             var candidateRefs = localRepo.remoteBranches(repository.authenticatedUrl().toString())
                     .stream()
-                    .filter(ref -> branches.matcher(ref.name()).matches() || ref.name().equals(defaultBranchName))
+                    .filter(ref -> !ref.name().startsWith("pr/"))
                     .toList();
             var knownRefs = candidateRefs
                     .stream()
                     .filter(ref -> branches.matcher(ref.name()).matches())
-                    .collect(Collectors.toList());
+                    .toList();
             localRepo.fetchAll(repository.authenticatedUrl(), true);
 
             var history = UpdateHistory.create(tagStorageBuilder, historyPath.resolve("tags"), branchStorageBuilder, historyPath.resolve("branches"));
@@ -385,7 +386,7 @@ public class RepositoryWorkItem implements WorkItem {
                         }
                     }
                 }
-                errors.addAll(handleRef(localRepo, history, ref, knownRefs, candidateRefs, scratchPath));
+                errors.addAll(handleRef(localRepo, history, ref, candidateRefs, scratchPath));
             }
 
             for (var listener : listeners) {
